--- a/bike_counters_starting_kit.ipynb
+++ b/bike_counters_starting_kit.ipynb
@@ -718,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "e1520969",
+   "id": "ea1bd1d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2169,7 +2169,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "bbe87d5c",
+   "id": "21dd152a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2180,7 +2180,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "a2c22e37",
+   "id": "1e21211b",
    "metadata": {},
    "outputs": [
     {
@@ -2232,7 +2232,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "3366c725",
+   "id": "50e7b1f9",
    "metadata": {},
    "outputs": [
     {
@@ -2282,7 +2282,7 @@
   {
    "cell_type": "code",
    "execution_count": 202,
-   "id": "3d5784c5",
+   "id": "067ee54a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2360,7 +2360,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "ac12e6d5",
+   "id": "2d8de201",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2389,7 +2389,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "2d2b15ed",
+   "id": "868bc742",
    "metadata": {},
    "outputs": [
     {
@@ -2411,7 +2411,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "dd81db65",
+   "id": "1a62c91c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2421,7 +2421,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "0f3e96a0",
+   "id": "690555a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2433,7 +2433,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "b3cd7bf1",
+   "id": "0b937ae4",
    "metadata": {},
    "outputs": [
     {
@@ -2472,7 +2472,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "b14a7903",
+   "id": "8132e451",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2482,7 +2482,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "5c69b736",
+   "id": "0cca5c66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2595,7 +2595,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "17f4b8df",
+   "id": "899285bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2605,7 +2605,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "a69d889e",
+   "id": "1990ce56",
    "metadata": {},
    "outputs": [
     {
@@ -2758,7 +2758,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e629001b",
+   "id": "6652080c",
    "metadata": {},
    "source": [
     "## Framework to tune hyperparameters for different regressors"
@@ -2766,7 +2766,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ff78fe6",
+   "id": "d964910c",
    "metadata": {},
    "source": [
     "For the four different regressors that we try out (RandomForest, GradientBoosting, HistGradientBoosting and XGBoost), we tune hyperparameters locally. We define a list of possible hyperparameters in a wide range, and try them all out on our regressors. To limit training time we do not compute multidimensional grid searches, instead just optimizing over one hyperparameter each time. The range containing a few of the best performing parameters can then be used for our submission on RAMP"
@@ -2775,7 +2775,7 @@
   {
    "cell_type": "code",
    "execution_count": 240,
-   "id": "a269e52a",
+   "id": "bc6a5b45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2789,7 +2789,7 @@
     "\n",
     "    numeric_cols = ['Temp','Wind','Rain','Cloud','3h_car_count','1h_car_count',\n",
     "                    'new_cases','total_vaccinations','stringency_index',\n",
-    "                    '500m construction','1000m construction']\n",
+    "                    '500m construction','1000m construction','daylight']\n",
     "\n",
     "    preprocessor = ColumnTransformer([\n",
     "        ('date', \"passthrough\", date_cols),\n",
@@ -2810,7 +2810,7 @@
   {
    "cell_type": "code",
    "execution_count": 193,
-   "id": "7a6cb943",
+   "id": "d053f118",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2827,7 +2827,7 @@
   {
    "cell_type": "code",
    "execution_count": 196,
-   "id": "d33a919e",
+   "id": "d9167147",
    "metadata": {},
    "outputs": [
     {
@@ -2880,7 +2880,7 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "id": "0c80a926",
+   "id": "54bb05cc",
    "metadata": {},
    "outputs": [
     {
@@ -2935,7 +2935,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "c5970c4e",
+   "id": "d7e27972",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2952,7 +2952,7 @@
   {
    "cell_type": "code",
    "execution_count": 210,
-   "id": "1d43fcfe",
+   "id": "c26dbe8e",
    "metadata": {},
    "outputs": [
     {
@@ -3007,7 +3007,7 @@
   {
    "cell_type": "code",
    "execution_count": 211,
-   "id": "e6bc26fb",
+   "id": "d3487318",
    "metadata": {},
    "outputs": [
     {
@@ -3048,7 +3048,7 @@
   {
    "cell_type": "code",
    "execution_count": 257,
-   "id": "3c363653",
+   "id": "44006f47",
    "metadata": {},
    "outputs": [
     {
@@ -3089,7 +3089,7 @@
   {
    "cell_type": "code",
    "execution_count": 255,
-   "id": "22406f97",
+   "id": "10b53d43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3108,7 +3108,7 @@
   {
    "cell_type": "code",
    "execution_count": 256,
-   "id": "587d239a",
+   "id": "5c3f6fea",
    "metadata": {},
    "outputs": [
     {
@@ -3163,7 +3163,7 @@
   {
    "cell_type": "code",
    "execution_count": 222,
-   "id": "3a0e8eab",
+   "id": "f4f7db0e",
    "metadata": {},
    "outputs": [
     {
@@ -3204,7 +3204,7 @@
   {
    "cell_type": "code",
    "execution_count": 225,
-   "id": "08537ea3",
+   "id": "0b572d2e",
    "metadata": {},
    "outputs": [
     {
@@ -3245,7 +3245,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "c295e138",
+   "id": "8e9854b5",
    "metadata": {},
    "outputs": [
     {
@@ -3286,7 +3286,7 @@
   {
    "cell_type": "code",
    "execution_count": 233,
-   "id": "23f0f40d",
+   "id": "ea448063",
    "metadata": {},
    "outputs": [
     {
@@ -3310,7 +3310,7 @@
   {
    "cell_type": "code",
    "execution_count": 245,
-   "id": "565e434b",
+   "id": "f3916096",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3329,7 +3329,7 @@
   {
    "cell_type": "code",
    "execution_count": 253,
-   "id": "559e7e25",
+   "id": "47f95726",
    "metadata": {},
    "outputs": [
     {
@@ -3384,7 +3384,7 @@
   {
    "cell_type": "code",
    "execution_count": 247,
-   "id": "ca603caf",
+   "id": "c8a476de",
    "metadata": {},
    "outputs": [
     {
@@ -3425,7 +3425,7 @@
   {
    "cell_type": "code",
    "execution_count": 248,
-   "id": "21fdd80b",
+   "id": "82e7ad3a",
    "metadata": {},
    "outputs": [
     {
@@ -3466,7 +3466,7 @@
   {
    "cell_type": "code",
    "execution_count": 249,
-   "id": "63f0d736",
+   "id": "b44c71a1",
    "metadata": {},
    "outputs": [
     {
@@ -3506,7 +3506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efd3bda8",
+   "id": "9b63cac0",
    "metadata": {},
    "source": [
     "## Best estimator"
@@ -3514,7 +3514,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9a61727",
+   "id": "34f21dfb",
    "metadata": {},
    "source": [
     "Estimator that gave the best results when submitting on RAMP platform. It is a HistGradientBooster combined with a random search in the pipeline. The random search tries to optimize the parameters in a range close to those optimal parameters found locally. The amount of iterations (tries) is limited by the time limit on the RAMP server. All feature engineering and processing of external data happens in the combine_external_data file."
@@ -3523,7 +3523,7 @@
   {
    "cell_type": "code",
    "execution_count": 258,
-   "id": "1b297904",
+   "id": "c33bb34c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3537,7 +3537,7 @@
     "\n",
     "    numeric_cols = ['weighted_mob','Temp','Wind','Rain','Cloud',\n",
     "                    '3h_car_count','1h_car_count','new_cases','total_vaccinations',\n",
-    "                    'stringency_index','500m construction','1000m construction']\n",
+    "                    'stringency_index','500m construction','1000m construction','daylight']\n",
     "\n",
     "    preprocessor = ColumnTransformer([\n",
     "        ('date', \"passthrough\", date_cols),\n",
